<resources>
    <string name="app_name">SegundaProva</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cadastro">Cadastro</string>
    <string name="t_tulo_da_task">Título da Task</string>
    <string name="t_tulo">Título</string>
    <string name="descri_o_da_task">Descrição da Task</string>
    <string name="status_da_task">Status da Task</string>
    <string name="status">Status</string>
    <string name="tarefas">Tarefas</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="listar_todos">Listar Todos</string>
    <string name="come_a">Começa:</string>
    <string name="termina">Termina:</string>
    <string name="editar">Editar</string>
    <string name="detalhes">Detalhes</string>
    <string name="deletar">Deletar</string>
    <string name="sobre">Sobre</string>
    <string name="alterar">Alterar</string>
</resources>