<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="tads.eaj.ufrn.segundaprova.viewmodel.CadastraFragmentViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cadastroText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/taskTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_tulo_da_task"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/inputTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:labelFor="@id/taskTitleText"
            android:text="@{viewmodel.taskTitle}"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/taskDescriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descri_o_da_task"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/inputTaskDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:labelFor="@id/taskDescriptionText"
            android:text="@{viewmodel.taskDescription}"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/taskStatusText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_da_task"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/inputTaskStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionHint="Digite o Status"
            android:inputType="text"
            android:text="@{viewmodel.taskStatus}"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/taskStartText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/come_a"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/inputTaskStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:labelFor="@id/taskStartText"
            android:text="@{viewmodel.taskStart}"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/taskEndText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/termina"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/inputTaskEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:labelFor="@id/taskEndText"
            android:text="@{viewmodel.taskEnd}"
            android:textSize="18sp" />

        <Button
            android:id="@+id/cadastraButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar"
            android:textSize="18sp" />

    </LinearLayout>
</layout>